test/1.4/errors/T_WNEGCONSTCOMP.dml
/*
  © 2021-2023 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.4;

device test;
import "testing.dml";

method test() throws {
    local uint64 a = -1;
    /// WARNING WNEGCONSTCOMP
    assert a != -1;
    /// WARNING WNEGCONSTCOMP
    assert a > -1;
    /// WARNING WNEGCONSTCOMP
    assert !(a < -1);
    /// WARNING WNEGCONSTCOMP
    assert a >= -1;
    /// WARNING WNEGCONSTCOMP
    assert !(a <= -1);

    // Sanity
    local int64 b = -1;
    // No warning
    assert b == -1;
    // No warning
    assert !(b < -1);

    // Test workaround
    assert a == cast(-1, uint64);
}
